lazy loading img

--- a/src/app/components/calendar/calendar.html
+++ b/src/app/components/calendar/calendar.html
@@ -58,6 +58,7 @@
                   alt="{{ property.title }}"
                   [src]="getPropertyImage(property)"
                   class="propertyavatar"
+                  loading="lazy"
                 />
               </div>
             </label>
