--- a/src/app/pages/add-property/step-2/step2-3-3-photos-ta-da/step2-3-3-photos-ta-da.html
+++ b/src/app/pages/add-property/step-2/step2-3-3-photos-ta-da/step2-3-3-photos-ta-da.html
@@ -25,10 +25,19 @@
           (dragover)="$event.preventDefault()"
           (drop)="onDrop(i)"
         >
-          <img [src]="photo" alt="Property photo" />
+          <img [src]="photo" alt="Property photo" loading="lazy" />
           <div *ngIf="i === 0" class="photo-caption">Cover Photo</div>
-          <button class="delete-button" (click)="removePhoto(i)" *ngIf="photos.length > 5">
-            <svg viewBox="0 0 32 32" fill="none" stroke="currentColor" stroke-width="2">
+          <button
+            class="delete-button"
+            (click)="removePhoto(i)"
+            *ngIf="photos.length > 5"
+          >
+            <svg
+              viewBox="0 0 32 32"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+            >
               <path d="M7 7L25 25M25 7L7 25"></path>
             </svg>
           </button>
