--- a/src/app/pages/add-property/steps-page/steps-page.html
+++ b/src/app/pages/add-property/steps-page/steps-page.html
@@ -14,6 +14,7 @@
       </div>
       <div class="step__image-container">
         <img
+          loading="lazy"
           class="step__image"
           src="https://a0.muscache.com/4ea/air/v2/pictures/da2e1a40-a92b-449e-8575-d8208cc5d409.jpg"
           alt="Illustration of a house with a checklist."
@@ -32,6 +33,7 @@
       </div>
       <div class="step__image-container">
         <img
+          loading="lazy"
           class="step__image"
           src="https://a0.muscache.com/4ea/air/v2/pictures/bfc0bc89-58cb-4525-a26e-7b23b750ee00.jpg"
           alt="Illustration of a camera and photos."
@@ -45,11 +47,13 @@
       <div class="step__text-content">
         <h2 class="step__title">Finish up and publish</h2>
         <p class="step__description">
-          Choose a starting price, verify a few details, then publish your listing.
+          Choose a starting price, verify a few details, then publish your
+          listing.
         </p>
       </div>
       <div class="step__image-container">
         <img
+          loading="lazy"
           class="step__image"
           src="https://a0.muscache.com/4ea/air/v2/pictures/c0634c73-9109-4710-8968-3e927df1191c.jpg"
           alt="Illustration of a person celebrating with a trophy."
