--- a/src/app/components/chat-box/chat-box.html
+++ b/src/app/components/chat-box/chat-box.html
@@ -2,7 +2,12 @@
   <!-- Header -->
   <div class="chat-header">
     <div class="profile-section">
-      <img [src]="hostProfileImage" class="profile-img" alt="Host" />
+      <img
+        [src]="hostProfileImage"
+        class="profile-img"
+        alt="Host"
+        loading="lazy"
+      />
       <span class="host-name">{{ hostName }}</span>
     </div>
   </div>
@@ -29,9 +34,9 @@
         <span class="dot"></span>
         <span class="dot"></span>
       </div>
-      <span class="loading-text"
-        >{{ 'CHAT.LOADING_MESSAGES' | translate }}</span
-      >
+      <span class="loading-text">{{
+        "CHAT.LOADING_MESSAGES" | translate
+      }}</span>
     </div>
 
     <ng-container
@@ -48,7 +53,7 @@
           {{ item.content }}
         </span>
         <span
-          style="color: #008489; text-decoration: underline; cursor: pointer;"
+          style="color: #008489; text-decoration: underline; cursor: pointer"
         >
           {{ item.action }}
         </span>
@@ -68,7 +73,8 @@
             [src]="hostProfileImage"
             class="profile-img"
             alt="Host"
-            style="width: 24px; height: 24px;"
+            style="width: 24px; height: 24px"
+            loading="lazy"
           />
           <span class="host-label">{{ hostName }}</span>
           <span class="timestamp">{{ item.timestamp }}</span>
@@ -129,15 +135,15 @@
         <!-- Timestamp for user messages -->
         <div *ngIf="item.isCurrentUser" class="user-timestamp">
           <span class="timestamp">{{ item.timestamp }}</span>
-          <span *ngIf="item.readBy" class="read-status"
-            >  {{ 'CHAT.READ_BY' | translate:{ name: item.readBy } }}
-</span
-          >
+          <span *ngIf="item.readBy" class="read-status">
+            {{ "CHAT.READ_BY" | translate : { name: item.readBy } }}
+          </span>
           <img
             *ngIf="item.readBy && i === getLastReadMessageIndex()"
             [src]="hostProfileImage"
             class="read-avatar"
             alt="Read by {{ item.readBy }}"
+            loading="lazy"
           />
         </div>
       </div>
@@ -181,7 +187,9 @@
           stroke-linecap="round"
         />
       </svg>
-      <span> {{ 'CHAT.RESPONSE_TIME' | translate:{ time: '11 hours' } }} </span>
+      <span>
+        {{ "CHAT.RESPONSE_TIME" | translate : { time: "11 hours" } }}
+      </span>
     </div>
   </div>
 </div>
