--- a/src/app/components/host-properties/host-properties.html
+++ b/src/app/components/host-properties/host-properties.html
@@ -53,7 +53,11 @@
       <div class="property-image-container">
         <div class="property-image">
           <ng-container *ngIf="hasValidImage(property)">
-            <img [src]="getCoverImageUrl(property)" [alt]="property.title" />
+            <img
+              [src]="getCoverImageUrl(property)"
+              [alt]="property.title"
+              loading="lazy"
+            />
             <div class="image-placeholder" style="display: none">🏠</div>
           </ng-container>
           <ng-container *ngIf="!hasValidImage(property)">
@@ -117,6 +121,7 @@
                 <img
                   [src]="getCoverImageUrl(property)"
                   [alt]="property.title"
+                  loading="lazy"
                 />
                 <div class="image-placeholder" style="display: none">🏠</div>
               </ng-container>
