--- a/src/app/components/not-found/not-found.html
+++ b/src/app/components/not-found/not-found.html
@@ -2,12 +2,10 @@
 <div class="not-found-container">
   <header class="page-container page-container-responsive space-top-4">
     <a href="/" class="icon icon-airbnb link-icon h2" routerLink="/">
-      <span class="screen-reader-only">
-        Airbnb
-      </span>
+      <span class="screen-reader-only"> Airbnb </span>
     </a>
   </header>
-  
+
   <div class="page-container page-container-responsive">
     <div class="row space-top-8 space-8">
       <div class="col-5 col-middle">
@@ -26,12 +24,13 @@
         </ul>
       </div>
       <div class="col-5 col-middle text-center">
-        <img 
-          src="https://a0.muscache.com/airbnb/static/error_pages/404-Airbnb_final-d652ff855b1335dd3eedc3baa8dc8b69.gif" 
-          width="313" 
-          height="428" 
+        <img
+          src="https://a0.muscache.com/airbnb/static/error_pages/404-Airbnb_final-d652ff855b1335dd3eedc3baa8dc8b69.gif"
+          width="313"
+          height="428"
           alt="Girl has dropped her ice cream."
-        >
+          loading="lazy"
+        />
       </div>
     </div>
   </div>
