--- a/src/app/components/search-modals/search-where-modal/search-where-modal.html
+++ b/src/app/components/search-modals/search-where-modal/search-where-modal.html
@@ -1,37 +1,47 @@
 <div class="p-2">
   <div>
     <h6 class="mb-3">
-      {{ 'HEADER.SUGGESTED_DESTINATIONS' | translate }}
+      {{ "HEADER.SUGGESTED_DESTINATIONS" | translate }}
     </h6>
     <ul class="list-unstyled">
       <li
         *ngFor="let destination of suggestedDestinations"
         class="d-flex align-items-center p-2 rounded-4"
-        (click)="onDestinationSelect({ country: destination.country,city: destination.city, state: destination.state, latitude: destination.latitude, longitude: destination.longitude })"
+        (click)="
+          onDestinationSelect({
+            country: destination.country,
+            city: destination.city,
+            state: destination.state,
+            latitude: destination.latitude,
+            longitude: destination.longitude
+          })
+        "
       >
         <img
           [src]="destination.iconSrc"
           alt=""
           class="me-3"
-          style="width: 32px; height: 32px;"
+          style="width: 32px; height: 32px"
+          loading="lazy"
         />
         <div>
           <p class="mb-0 fw-bold">
-            {{ destination.country }} {{destination.city}} {{destination.state}}
+            {{ destination.country }} {{ destination.city }}
+            {{ destination.state }}
           </p>
-          <small style="color: var(--secondary-text-color);"
-            >{{ destination.description }}</small
-          >
+          <small style="color: var(--secondary-text-color)">{{
+            destination.description
+          }}</small>
         </div>
       </li>
 
       @if (isLoading) {
       <li
         class="d-flex align-items-center p-2 shimmer rounded-4 mb-2"
-        *ngFor="let x of [1,2,3,4,5,6,7,8,9]"
+        *ngFor="let x of [1, 2, 3, 4, 5, 6, 7, 8, 9]"
       >
         <div class="me-3 rounded-circle shimmer-icon"></div>
-        <div style="flex: 1;">
+        <div style="flex: 1">
           <div class="shimmer-line w-75 mb-2"></div>
           <div class="shimmer-line w-50"></div>
         </div>
