--- a/src/app/pages/PropertyDetails/reverse-section/reverse-section.component.html
+++ b/src/app/pages/PropertyDetails/reverse-section/reverse-section.component.html
@@ -11,7 +11,7 @@
   <div class="reserve-box">
     <div class="price-info">
       price:- <span class="price">{{ pricePerNight | currency }}</span>
-      <span> for {{nightsCount}} night</span>
+      <span> for {{ nightsCount }} night</span>
     </div>
     <div
       class="total-price"
@@ -20,9 +20,10 @@
     >
       Total
       <img
-        style="width: 20px; height: 25px;"
+        style="width: 20px; height: 25px"
         src="assets/images/dollars.png"
         alt="dolar image"
+        loading="lazy"
       />
       : {{ totalPrice | currency }}
     </div>
@@ -84,7 +85,7 @@
             </button>
             <span>{{ guests.adults }}</span>
             <button
-              [disabled]="(guests.adults + guests.children) >= maxGuests"
+              [disabled]="guests.adults + guests.children >= maxGuests"
               (click)="updateGuests('adults', 1)"
             >
               +
@@ -106,7 +107,7 @@
             </button>
             <span>{{ guests.children }}</span>
             <button
-              [disabled]="(guests.adults + guests.children) >= maxGuests"
+              [disabled]="guests.adults + guests.children >= maxGuests"
               (click)="updateGuests('children', 1)"
             >
               +
@@ -128,7 +129,7 @@
 
         <div class="guest-limit-note" *ngIf="maxGuests">
           This place has a maximum of
-          <span style="color: rgb(24, 162, 242); font-size: large;">
+          <span style="color: rgb(24, 162, 242); font-size: large">
             {{ maxGuests }}</span
           >
           guests If you're bringing more than 2 pets, please let your host know.
@@ -153,7 +154,7 @@
 
     <!-- If unavailable -->
     <div *ngIf="isDateRangeAvailable === false" class="mt-2 text-danger">
-      ❌ Unavailable Dates: {{ unavailableDates.join(', ') }}
+      ❌ Unavailable Dates: {{ unavailableDates.join(", ") }}
     </div>
     <div class="button-subtext mt-3">You won't be charged yet</div>
   </div>
