--- a/src/app/pages/add-property/step-1/step1-3-what-type/step1-3-what-type.html
+++ b/src/app/pages/add-property/step-1/step1-3-what-type/step1-3-what-type.html
@@ -18,15 +18,51 @@
           </div>
           <div class="selection-icon">
             <ng-container [ngSwitch]="option.key">
-              <svg *ngSwitchCase="'entire'" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M13 28V18.5C13 17.6716 13.6716 17 14.5 17H17.5C18.3284 17 19 17.6716 19 18.5V28H25C25.5523 28 26 27.5523 26 27V13.8131C26 13.2533 25.7724 12.7203 25.3688 12.354L17.3688 5.04789C16.6202 4.36319 15.3798 4.36319 14.6312 5.04789L6.6312 12.354C6.22761 12.7203 6 13.2533 6 13.8131V27C6 27.5523 6.44772 28 7 28H13Z" stroke="#222222" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              <svg
+                *ngSwitchCase="'entire'"
+                viewBox="0 0 32 32"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M13 28V18.5C13 17.6716 13.6716 17 14.5 17H17.5C18.3284 17 19 17.6716 19 18.5V28H25C25.5523 28 26 27.5523 26 27V13.8131C26 13.2533 25.7724 12.7203 25.3688 12.354L17.3688 5.04789C16.6202 4.36319 15.3798 4.36319 14.6312 5.04789L6.6312 12.354C6.22761 12.7203 6 13.2533 6 13.8131V27C6 27.5523 6.44772 28 7 28H13Z"
+                  stroke="#222222"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
               </svg>
-              <svg *ngSwitchCase="'room'" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M25 28V5C25 4.44772 24.5523 4 24 4H8C7.44772 4 7 4.44772 7 5V28H4V27C4 26.4477 4.44772 26 5 26H27C27.5523 26 28 26.4477 28 27V28H25Z" stroke="#222222" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M19 19C19 19.5523 18.5523 20 18 20C17.4477 20 17 19.5523 17 19C17 18.4477 17.4477 18 18 18C18.5523 18 19 18.4477 19 19Z" fill="#222222"/>
-                <path d="M7 28H25" stroke="#222222" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              <svg
+                *ngSwitchCase="'room'"
+                viewBox="0 0 32 32"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M25 28V5C25 4.44772 24.5523 4 24 4H8C7.44772 4 7 4.44772 7 5V28H4V27C4 26.4477 4.44772 26 5 26H27C27.5523 26 28 26.4477 28 27V28H25Z"
+                  stroke="#222222"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+                <path
+                  d="M19 19C19 19.5523 18.5523 20 18 20C17.4477 20 17 19.5523 17 19C17 18.4477 17.4477 18 18 18C18.5523 18 19 18.4477 19 19Z"
+                  fill="#222222"
+                />
+                <path
+                  d="M7 28H25"
+                  stroke="#222222"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
               </svg>
-              <img *ngSwitchCase="'shared'" src="https://img.icons8.com/?size=100&id=4024&format=png&color=000000" alt="Shared Icon">
+              <img
+                *ngSwitchCase="'shared'"
+                loading="lazy"
+                src="https://img.icons8.com/?size=100&id=4024&format=png&color=000000"
+                alt="Shared Icon"
+              />
             </ng-container>
           </div>
         </button>
