--- a/src/app/pages/host-profile/host-profile.html
+++ b/src/app/pages/host-profile/host-profile.html
@@ -11,23 +11,25 @@
   <div *ngIf="error" class="error-message alert alert-danger">
     <i class="bi bi-exclamation-triangle-fill"></i>
     <p>{{ error }}</p>
-    <button class="btn btn-primary" (click)="loadHostProfile()">
-      Retry
-    </button>
+    <button class="btn btn-primary" (click)="loadHostProfile()">Retry</button>
   </div>
 
   <!-- Content -->
   <div *ngIf="host && !isLoading" class="host-profile-content">
     <div class="profile-header">
       <div class="profile-image-container">
-        <img [src]="profileImage" 
-             alt="Profile picture" class="profile-image rounded-circle">
+        <img
+          [src]="profileImage"
+          alt="Profile picture"
+          class="profile-image rounded-circle"
+          loading="lazy"
+        />
       </div>
-      
+
       <div class="profile-info">
         <h1>{{ fullName }}</h1>
         <div class="host-badge bg-primary text-white">Host</div>
-        
+
         <div class="stats-container d-flex gap-4">
           <div class="stat-item">
             <!-- <div class="stat-value">20</div> -->
@@ -47,17 +49,20 @@
 
     <div class="profile-details border-top pt-4">
       <h2>About {{ host.firstName }}</h2>
-      
+
       <div class="about-section mb-4" *ngIf="host.bio">
         <!-- <p *ngIf="!showFullBio">{{ (host.bio | truncate:150) || '' }}</p> -->
         <p *ngIf="showFullBio">{{ host.bio }}</p>
         <button class="btn btn-link p-0" (click)="toggleBio()">
-          {{ showFullBio ? 'Show less' : 'Show more' }}
+          {{ showFullBio ? "Show less" : "Show more" }}
         </button>
       </div>
-      
+
       <div class="details-grid row g-3">
-        <div class="detail-item col-md-6 d-flex align-items-center" *ngIf="host.country">
+        <div
+          class="detail-item col-md-6 d-flex align-items-center"
+          *ngIf="host.country"
+        >
           <i class="bi bi-geo-alt-fill me-2 text-primary"></i>
           <span>From {{ host.country }}</span>
         </div>
@@ -73,7 +78,10 @@
           <i class="bi bi-piggy-bank-fill me-2 text-primary"></i>
           <span>Dopa is a mini chihuahua dog</span>
         </div>
-        <div class="detail-item col-md-6 d-flex align-items-center" *ngIf="getAge() !== null">
+        <div
+          class="detail-item col-md-6 d-flex align-items-center"
+          *ngIf="getAge() !== null"
+        >
           <i class="bi bi-balloon-fill me-2 text-primary"></i>
           <span>Born in the 90s ({{ getAge() }} years old)</span>
         </div>
