--- a/src/app/pages/update-profile/update-profile.html
+++ b/src/app/pages/update-profile/update-profile.html
@@ -18,6 +18,7 @@
             [src]="previewImageUrl"
             class="original-img"
             draggable="false"
+            loading="lazy"
           />
 
           <!-- Crop overlay -->
@@ -80,7 +81,7 @@
     #profileForm="ngForm"
   >
     <div class="user-img">
-      <img *ngIf="ifImg" [src]="img" alt="user-img" />
+      <img *ngIf="ifImg" [src]="img" alt="user-img" loading="lazy" />
       <span class="initial-letter" *ngIf="!ifImg">
         {{ user?.charAt(0)?.toUpperCase() || "K" }}
       </span>
